dnl Process this file with autoconf to produce a configure script.
AC_INIT(agent/extensible/extensible.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_CHECK_PROGS(CC,cc gcc c89,cc)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_AIX

dnl system check
AC_CANONICAL_SYSTEM
CFLAGS="$CFLAGS -D`echo $target_os | sed 's/\..*//'`"

dnl Solaris specialties
case "$target_os" in
solaris2*) CPPFLAGS="$CPPFLAGS -I/usr/ucbinclude -I/usr/include" ; LDFLAGS="-L/usr/ucblib $LDFLAGS" ;;
esac

dnl Check for kernel location
AC_MSG_CHECKING(for location of sytem kernel)
if test -f /vmunix; then
  AC_DEFINE(KERNEL_LOC,"/vmunix")
  KERNEL_LOC="/vmunix"
elif test -f /hp-ux; then
  AC_DEFINE(KERNEL_LOC,"/hp-ux")
  KERNEL_LOC="/hp-ux"
elif test -f /kernel/unix; then
  AC_DEFINE(KERNEL_LOC,"/kernel/unix")
  KERNEL_LOC="/kernel/unix"
elif test -f /unix; then
  AC_DEFINE(KERNEL_LOC,"/unix")
  KERNEL_LOC="/unix"
else
  AC_MSG_WARN(Can't find system kernel...  Setting to /vmunix)
  AC_DEFINE(KERNEL_LOC,"/vmunix")
  KERNEL_LOC="/vmunix"
fi
AC_MSG_RESULT($KERNEL_LOC)

dnl Check for /dev/dmem or /dev/drum location
AC_MSG_CHECKING(for location of swap device)

dnl First determine if test expects a -f or a -c (character device (SYSV))

if test -f /dev/kmem; then
  CTEST="test -f"
elif test -c /dev/kmem; then
  CTEST="test -c"
else
  dnl fall back
  CTEST="test -f"
fi

if $CTEST /dev/dmem; then
  AC_DEFINE(DMEM_LOC,"/dev/dmem")
  DMEM_LOC="/dev/dmem"
elif $CTEST /dev/drum; then
  AC_DEFINE(DMEM_LOC,"/dev/drum")
  DMEM_LOC="/dev/drum"
else
  DMEM_LOC="none"
fi
AC_MSG_RESULT($DMEM_LOC)

dnl Checks for libraries.
dnl Replace `main' with a function in -lX11:
dnl AC_CHECK_LIB(X11, main)
dnl Replace `main' with a function in -lXau:
dnl AC_CHECK_LIB(Xau, main)
dnl Replace `main' with a function in -lXaw:
dnl AC_CHECK_LIB(Xaw, main)
dnl Replace `main' with a function in -lXext:
dnl AC_CHECK_LIB(Xext, main)
dnl Replace `main' with a function in -lXmu:
dnl AC_CHECK_LIB(Xmu, main)
dnl Replace `main' with a function in -lXt:
dnl AC_CHECK_LIB(Xt, main)
dnl Replace `main' with a function in -ldes:
dnl AC_CHECK_LIB(des, main)
dnl Replace `main' with a function in -lelf:
dnl AC_CHECK_LIB(elf, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, asin)
dnl Replace `main' with a function in -lnsl:
AC_CHECK_LIB(nsl, gethostbyname)
dnl Replace `main' with a function in -loldX:
dnl AC_CHECK_LIB(oldX, main)
dnl Replace `main' with a function in -lsnmp:
dnl AC_CHECK_LIB(snmp, main)
dnl Replace `main' with a function in -lsocket:
AC_CHECK_LIB(socket, getservbyname)
dnl Replace `main' with a function in -lsocket:
AC_CHECK_LIB(ucb, bzero)
dnl Replace `main' with a function in -ltcl:
dnl AC_CHECK_LIB(tcl, main)
dnl Replace `main' with a function in -ltk:
dnl AC_CHECK_LIB(tk, main)
dnl Replace `main' with a function in -lkstat:
AC_CHECK_LIB(kstat, kstat_lookup)
dnl Replace `main' with a function in -lkvm:
AC_CHECK_LIB(kvm, kvm_physaddr)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h sys/file.h sys/ioctl.h syslog.h unistd.h netinet/tcpip.h netinet/in.h sys/dmap.h machine/pte.h xti.h sys/sockio.h fstab.h sys/fs.h mtab.h ufs/fs.h sys/fixpoint.h machine/param.h sys/vmmeter.h sys/mbuf.h sys/time.h sys/swap.h inet/mib2.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_OFF_T
AC_HEADER_TIME

dnl checking for alpha's ortentry vs rtentry
AC_MSG_CHECKING(for struct rtentry)
AC_EGREP_CPP(ortentry, [#define KERNEL
#include<net/route.h>
], AC_DEFINE(RTENTRY, struct ortentry) RTFOUND=ortentry, AC_DEFINE(RTENTRY,struct rtentry) RTFOUND=rtentry)
AC_MSG_RESULT($RTFOUND)

dnl Check ps args
AC_MSG_CHECKING(for correct flags to ps)
if test "`(/bin/ps -e 2>&1) | egrep ' ps$' | awk '{print $NF}'`" = "ps" ; then
  AC_DEFINE(PSCMD,"/bin/ps -e")
  PSARGS="-e"
elif test "`(/bin/ps -el 2>&1) | egrep ' ps$' | awk '{print $NF}''`" = "ps" ; then
  AC_DEFINE(PSCMD,"/bin/ps -el")
  PSARGS="-el"
elif test "`(/bin/ps -acx 2>&1) | egrep ' ps$' | awk '{print $NF}''`" = "ps" ; then
  AC_DEFINE(PSCMD,"/bin/ps -acx")
  PSARGS="-acx"
else
  AC_DEFINE(PSCMD,"/bin/ps -acx")
  PSARGS="unknown...  Guessing:  -acx"
fi
AC_MSG_RESULT($PSARGS)

dnl Checks for byte order
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(gethostname gettimeofday select socket strtol)

AC_OUTPUT(snmplib/Makefile Makefile snmptcl/Makefile agent/Makefile apps/Makefile apps/snmpnetstat/Makefile agent/extensible/Makefile)

